# glacian

./: .gitignore  Cargo.toml  Design.md  README.md  flake.nix  shell.nix
assets/shaders/: sky.spv  vert.spv
glacian/: Cargo.toml
glacian-render/: Cargo.toml
glacian-render/src/: lib.rs  terrain.rs  vk_render.rs  wgpu_render.rs
glacian-render/src/vk_render/: allocations.rs  debug.rs  descriptor.rs  mesh_buffer.rs  skybox.rs  swapchain.rs  terrain.rs  utils.rs
glacian-ui/: Cargo.toml
glacian/src/: main.rs
shaders/: gradient.comp  gradient.slang  main.vert  skybox.slang
src/: lib.rs  main.rs  render.rs
src/render/: allocations.rs  debug.rs  descriptor.rs  mesh_buffer.rs  skybox.rs  swapchain.rs  utils.rs
