[package]
name = "glade"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "0.38.0", default-features = false, features = ["linked", "debug", "std"] }
bytemuck = "1.23.1"
glam = "0.30.3"
glfw = { version = "0.59.0", features = ["wayland", "log"] }
modular-bitfield = "0.12.0"
noise = "0.9.0"
raw-window-handle = "0.6.2"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["release_max_level_warn"] }
tracing-subscriber = "0.3.19"
vk-mem = "0.4.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
debug = []
profiling = []
