[package]
name = "glade"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
bytemuck = { version = "1.23.1", features = ["derive"] }
glam = { version = "0.30.3", features = ["bytemuck"] }
glfw = { version = "0.59.0", features = ["wayland", "log"] }
gltf = "1.4.1"
modular-bitfield = "0.12.0"
noise = "0.9.0"
raw-window-handle = "0.6.2"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["release_max_level_warn"] }
tracing-subscriber = "0.3.19"
vk-mem = "0.4.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
debug = []
