[package]
name = "glacian"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
glam = { version = "0.30.3", features = ["bytemuck"] }
noise = "0.9.0"
modular-bitfield = "0.12.0"
sdl3 = { version = "0.15.1", features = ["raw-window-handle"] }
vulkanalia = { version = "0.33.0", features = ["libloading", "window"] }
vulkanalia-vma = "0.7.0"
tracy-client = { version = "0.18.3", optional = true }
piglog = "1.4.1"
binary-greedy-meshing = "0.5.0"
rootcause = "0.11.0"
fork_union = "2.3.0"

[features]
default = ["logging"]
logging = []
tracy = ["dep:tracy-client"]

[profile.release]
lto = true
strip = true
panic = "abort"

[lints.clippy]
perf = "deny"
suspicious = "deny"
complexity = "deny"
unwrap_used = "deny"
