[package]
name = "glacian-render"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "0.38.0", optional = true }
bytemuck = { version = "1.23.1", features = ["derive"] }
glam = { version = "0.30.3", features = ["bytemuck"] }
pollster = { version = "0.4.0", optional = true }
sdl3 = { version = "0.14.40", features = ["ash"] }
tracing = "0.1.41"
vk-mem = { version = "0.5.0", optional = true }
wgpu = { version = "26.0.1", optional = true }
modular-bitfield = "0.12.0"
binary-greedy-meshing = "0.5.0"

[features]
default = ["vulkan"]
vulkan = ["dep:ash", "dep:vk-mem"]
wgpu = ["dep:wgpu", "dep:pollster"]
debug = []
