[package]
name = "glade"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
bytemuck = { version = "1.23.1", features = ["derive"] }
glam = { version = "0.30.3", features = ["bytemuck", "glam-assert"] }
noise = "0.9.0"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
vk-mem = "0.5.0"
glacian-render = { path = "../glacian-render/", default-features = false, features = [
  "vulkan",
  "debug",
] }
sdl3 = "0.14.40"
